samples/_failures_safe/1761277845_fa3490_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7691702.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_c7691702.c:169:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  169 |     const char *names
      |     ^~~~~
./samples/SAFE/__tmp_c7691702.c:169:5: error: expected declaration or statement at end of input
